Closed Bug 83700 Opened 25 years ago Closed 25 years ago

Opening Cert Manager does not ask for SmartCard login

Categories

(Core Graveyard :: Security: UI, defect, P1)

1.0 Branch
x86
Windows 98
defect

Tracking

(Not tracked)

VERIFIED FIXED
psm2.0

People

(Reporter: junruh, Assigned: javi)

References

Details

(Whiteboard: PDT+; verified.)

Attachments

(1 file)

1.) With a SmartCard installed and with a cert on it, open the cert manager. What is expected: I should be asked to log on to SmartCard at this point. What happens: I am not asked to log on, and the certs on the SmartCard do not appear on the list. So, I have to close the cert manager, open Manage Security Devices, log on, close the window, and reopen the cert manager to see my certs.
*** Bug 84062 has been marked as a duplicate of this bug. ***
Priority: -- → P2
taking bug
Assignee: ddrinan → javi
r=mcgreer
Target Milestone: --- → 2.0
sr=blizzard
Blocks: 83989
a= asa@mozilla.org for checkin to the trunk. (on behalf of drivers)
->P1
Priority: P2 → P1
Patch checked in.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Verified.
Status: RESOLVED → VERIFIED
PDT for PSM
Whiteboard: PDT
PDT+ as per Steve Elmeer 6/20/2001
Whiteboard: PDT → PDT+
whiteboard->verified
Whiteboard: PDT+ → PDT+; verified.
Product: PSM → Core
Version: psm2.0 → 1.0 Branch
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: