Fix for Bug 83700.  r=mcgreer, sr=blizard, a=asa   We need to pass a nsIInterfaceRequestor to PK11_ListCerts   so that the user will get prompted for a password and see   his/her certs on any installed smart cards.